k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dry-api-service
  namespace: dryapi
  labels:
    app: dry-api
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: dry-api
